# McKenna

./: .gitignore  analyze.py  compare.py  config.yaml  main.py  mckenna.py  numeric.py  parallel_perf.txt  run.py  uq.py
analysis/: numeric.py
cfd/: CMakeLists.txt  test.json
cfd/include/: util.h
cfd/src/: main.c  util.c
mckenna/: __init__.py  backup.py  config.py  logging.py  model.py  montecarlo.py  mytypes.py  utility.py
